RESOLVED FIXED303473
Enforce that opaque CFTypes can't be sent from WebContent
https://bugs.webkit.org/show_bug.cgi?id=303473
Summary Enforce that opaque CFTypes can't be sent from WebContent
Gavin
Reported 2025-12-03 04:49:31 PST
Enforce that opaque CFTypes can't be sent from WebContent
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-03 05:06:25 PST
Gavin
Comment 2 2025-12-03 05:10:35 PST
Alexey Proskuryakov
Comment 3 2025-12-03 16:41:51 PST
*** Bug 303472 has been marked as a duplicate of this bug. ***
Simon Lewis
Comment 4 2026-04-15 16:13:47 PDT
EWS
Comment 5 2026-05-06 17:32:01 PDT
Committed 312756@main (02d7918cb674): <https://commits.webkit.org/312756@main> Reviewed commits have been landed. Closing PR #62859 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.