Enforce that container CFTypes can't be sent from WebContent https://bugs.webkit.org/show_bug.cgi?id=303473 rdar://165756991

Reviewed by NOBODY (OOPS!).

Enforces that CFDictionary, CFArray and similar wrappers (like CFType)
can't be dispatched from the WebContent process.

* Source/WebKit/Scripts/webkit/opaque_ipc_types.tracking.in:
* Source/WebKit/Shared/Cocoa/CoreIPCCFType.mm:
(WebKit::CoreIPCCFType::CoreIPCCFType):
* Source/WebKit/Shared/Cocoa/CoreIPCDictionary.mm:
(WebKit::CoreIPCDictionary::CoreIPCDictionary):
* Source/WebKit/Shared/Cocoa/CoreIPCPlistArray.mm:
(WebKit::CoreIPCPlistArray::CoreIPCPlistArray):
* Source/WebKit/Shared/Cocoa/CoreIPCPlistDictionary.mm:
(WebKit::CoreIPCPlistDictionary::CoreIPCPlistDictionary):
* Source/WebKit/Shared/Cocoa/CoreIPCPlistObject.mm:
(WebKit::CoreIPCPlistObject::CoreIPCPlistObject):
* Source/WebKit/Shared/cf/CoreIPCCFArray.mm:
(WebKit::CoreIPCCFArray::CoreIPCCFArray):
* Source/WebKit/Shared/cf/CoreIPCCFDictionary.mm:
(WebKit::CoreIPCCFDictionary::CoreIPCCFDictionary):