Source/WebKit/Shared/Cocoa/CoreIPCPlistObject.mm
@@ -36,6 +36,7 @@
 #import "CoreIPCPlistDictionary.h"
 #import "CoreIPCString.h"
 #import "GeneratedWebKitSecureCoding.h"
+#import <wtf/RuntimeApplicationChecks.h>
 #import <wtf/cocoa/TypeCastsCocoa.h>
 
 namespace WebKit {
@@ -75,6 +76,7 @@ static PlistValue valueFromID(id object)
 CoreIPCPlistObject::CoreIPCPlistObject(id object)
     : m_value(makeUniqueRefWithoutFastMallocCheck<PlistValue>(valueFromID(object)))
 {
+    RELEASE_ASSERT_WITH_SECURITY_IMPLICATION(!isInWebProcess());
 }
 
 CoreIPCPlistObject::CoreIPCPlistObject(UniqueRef<PlistValue>&& value)
